Refactoring common deps for brewery services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=inventory-service
-
 logging.level.guru=debug
 
 server.port=8082
-spring.h2.console.enabled=true
+
+spring.zipkin.enabled=false
+
+
+
