--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.zipkin.enabled=false
 spring.security.user.name=good
 spring.security.user.password=beer
 
+spring.data.jpa.repositories.bootstrap-mode=default
+
+
+
